<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:background="@color/cor_azul"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/cor_azul"
            app:title="@string/home" />


        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_margin="40dp"
            android:src="@drawable/quinto_player_splash"
            app:layout_constraintBottom_toTopOf="@id/btPartidas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cor_azul"
            android:text="@string/perfil"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btJogadores"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        <Button
            android:id="@+id/btPartidas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cor_azul"
            android:text="@string/listaJogos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        <Button
            android:id="@+id/btJogadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cor_azul"
            android:text="@string/listaJogadores"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btPartidas"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>



